--- a/src/assets/scss/_Modal.scss
+++ b/src/assets/scss/_Modal.scss
@@ -25,8 +25,10 @@
         font-family: Lato;
         font-style: normal;
         font-weight: 600;
-        font-size: 24px;
+        font-size:18px;
+        letter-spacing: 0.08rem;
         text-transform: uppercase;
+        font-weight: 700;
         line-height: 36px;
         color: #000000;
         margin:0px;
