--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -1,12 +1,15 @@
 @import './variables.scss';
 @import './fonts.scss';
 @import './colors.scss';
+.item-list {
+  margin-bottom: 35px;
+}
 .dashboardProduct {
   background: #ffffff;
   box-shadow: 0px 1px 4px 3px rgba(159, 159, 159, 0.11);
   border-radius: 4px;
   padding: 20px;
-  margin:4px;
+  height: 100%;
   .btn-next {
     background: #ffffff;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
@@ -103,6 +106,7 @@
 .card-body {
   padding: 20px;
   .nav-tabs {
+    padding: 15px 0px;
     border-bottom: 0px;
     .nav-link {
       padding: 0px;
@@ -114,16 +118,17 @@
       line-height: 17px;
       color: #000;
       margin-bottom: 15px;
+      letter-spacing: 0.08rem;
       position: relative;
 
       &.active {
         color: #5a88d5 !important;
         &::after {
           content: '';
-          width: 40px;
+          width: 100%;
           height: 2px;
           position: absolute;
-          bottom: -12px;
+          bottom: -5px;
           left: 0px;
           background: linear-gradient(90deg, #5433ff 0%, #e613d5 100%);
         }
@@ -160,9 +165,11 @@
 }
 .owl-nav {
   display: flex;
-  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 0px 0px 0px 4px;
-  justify-content: space-between;
+  .owl-next {
+    margin-left: 15px;
+  }
   button {
     background: linear-gradient(
       124.99deg,
@@ -177,7 +184,7 @@
     margin-right: 2px;
     border-radius: 50%;
     i {
-      align-self: center;
+      line-height: 28px;
       color: #fff;
     }
   }
@@ -296,7 +303,7 @@ line-height: 19px;
 color: #FFFFFF;
   }
   .switchNav {
-    margin-bottom:50px;
+    margin-bottom:30px;
       li {
         font-family: Lato;
         font-style: normal;
