--- a/src/assets/scss/_pricing.scss
+++ b/src/assets/scss/_pricing.scss
@@ -132,11 +132,11 @@
     }
   }
   .poular {
-    background: linear-gradient(90deg, #5433FF 0%, #E613D5 100%);
+    background: #F2F5FC ;
     mix-blend-mode: normal;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.11);
     border-radius: 15px;
-    border:1px solid #5433FF;
+    border:1px solid #F2F5FC ;
     padding: 14px 0px;
     width:180px;
     display: block;
