--- a/src/assets/scss/_projectedit.scss
+++ b/src/assets/scss/_projectedit.scss
@@ -67,10 +67,10 @@ padding: 20px;
              background-color: inherit;
             &::after {
               content: '';
-              width: 40px;
-              height: 2px;
+              width: 100%;
+              height: 4px;
               position: absolute;
-              bottom: -12px;
+              bottom: -19px;
               left: 0px;
               background: linear-gradient(90deg, #5433ff 0%, #e613d5 100%);
             }
@@ -110,10 +110,10 @@ padding: 20px;
                  background-color: inherit;
                 &::after {
                   content: '';
-                  width: 40px;
-                  height: 2px;
+                  width: 100%;
+                  height: 3px;
                   position: absolute;
-                  bottom: -12px;
+                  bottom: -19px;
                   left: 0px;
                   background: linear-gradient(90deg, #5433ff 0%, #e613d5 100%);
                 }
