--- a/src/assets/scss/_projects.scss
+++ b/src/assets/scss/_projects.scss
@@ -104,6 +104,14 @@ border-radius: 8px;
 justify-content: space-between;
 margin-bottom: 10px;
 td {
-  padding: 10px 10px !important;
+  padding: 2px 10px !important;
 }
+}
+
+.projectList a, .viewAll {
+  color: #5a88d5;
+  text-decoration: none;
+  font-size: 12px;
+  letter-spacing: 0.08rem;
+  font-weight: 700;
 }
