react application file structure

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -255,6 +255,7 @@ form {
   border: 1px solid rgba(90, 136, 213, 0.3);
   border-radius: 8px;
   height: 100%;
+  overflow: hidden;
 }
 .btn-wishlist {
   padding: 0px;
