--- a/src/assets/scss/_Modal.scss
+++ b/src/assets/scss/_Modal.scss
@@ -3,11 +3,16 @@
     top: 0;
     left: 0;
     width:100%;
+    z-index: 99999;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
   }
   
   .modal-main {
+    .modal-dialog {
+      width: 100%;
+      max-width: 100%;
+    }
     position:relative;
     background: white;
     height: auto;
