--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -8,7 +8,7 @@
   background: #ffffff;
   box-shadow: 0px 1px 4px 3px rgba(159, 159, 159, 0.11);
   border-radius: 4px;
-  padding: 20px;
+  padding:30px 20px;
   height: 100%;
   position: relative;
   .popularClass {
@@ -174,6 +174,7 @@
 }
 .owl-nav {
   display: flex;
+  margin-top: 30px;
   margin-bottom: 20px;
   padding: 0px 0px 0px 4px;
   .owl-next {
