2021-07-29 react application files

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,7 +1,8 @@
 
 .MuiDrawer-paperAnchorDockedLeft {
-  background-color:#5a88d5 !important;
-
+  background: linear-gradient(
+128deg
+, rgb(56, 184, 242), rgb(132, 60, 246))!important;
 }
 .side-menu {
   position: fixed;
