--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -31,6 +31,9 @@
   .MuiDrawer-paperAnchorLeft{ 
     width: 240px !important;
   }
+  .MuiIconButton-root {
+    display: none;
+  }
 }
 .side-menu {
   position: fixed;
