--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -32,7 +32,7 @@
     width: 240px !important;
   }
   .MuiIconButton-root {
-    display: none;
+    display: none !important;
   }
 }
 .side-menu {
