--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -8,7 +8,7 @@
   border-right: 0 !important;
 }
 @media screen and (max-width:991px) {
-  .jss14 {
+  .MuiDrawer-paperAnchorLeft {
     width: 240px !important;
     z-index: 9999 !important;
     .makeStyles-toolbar-8 {
