--- a/src/assets/scss/_projects.scss
+++ b/src/assets/scss/_projects.scss
@@ -7,6 +7,18 @@
     line-height: 16px;
     letter-spacing: 0.01em;
     margin: 0px;
+    a {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 16px;
+      letter-spacing: 0.01em;
+      margin: 0px;
+      text-decoration: none;
+      color:#000;
+      font-weight: 700;
+    }
   }
   th {
     font-family: Lato;
@@ -31,35 +43,8 @@
       }
     }
   }
-  .delete {
-    i {
-      color: #fff;
-      font-size: 12px;
-      line-height: 18px;
-    }
-    .badge {
-      background-color: #ae0000;
-      border-radius: 50%;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-    }
-  }
 
-  .edit {
-    i {
-      color: #fff;
-      font-size: 12px;
-      line-height: 15px;
-    }
-    .badge {
-      background-color: #5a88d5;
-      border-radius: 50%;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-    }
-  }
+
 }
 .borderless td,
 .borderless th {
