--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -9,7 +9,7 @@
 @import './dashboard.scss';
 @import './profile.scss';
 
-
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 * {
   margin: 0;
@@ -333,3 +333,36 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
+/*** custom checkboxes ***/
+input[type=checkbox] {
+  display:none;
+}
+/* to hide the checkbox itself */
+input[type=checkbox] + label:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding: 11px 12px;
+    background-size: 23px;
+    margin: 7px 0px;
+    /* width: 30px; */
+    /* height: 30px; */
+    background-repeat: no-repeat;
+}
+input[type=checkbox] + label:before {
+  content:"";
+  background-image: url('../images/heart.png');
+}
+/* unchecked icon */
+input[type=checkbox] + label:before {
+  letter-spacing: 10px;
+}
+/* space between checkbox and label */
+input[type=checkbox]:checked + label:before {
+  content:"";
+  background-image: url('../images/like.png');
+}
+/* checked icon */
+input[type=checkbox]:checked + label:before {
+  letter-spacing: 5px;
+}
+/* allow space for check mark */
