updated build with drag and drop functionality

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -408,3 +408,13 @@ input[type=checkbox]:checked + label:before {
    padding: 0px;
  }
 }
+
+
+.err {
+  font-size:12px;
+  color: red;
+}
+.asterisk{
+  font-size:12px;
+  color: red;
+}
