--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -188,6 +188,7 @@ body {
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+  margin-left: 11px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
 
