updated build with slider changes

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -3,3 +3,4 @@ $billingbg:linear-gradient(115.69deg, rgba(242, 107, 69, 0.6) 0%, rgba(252, 189,
 $billingbrdr:rgba(242, 107, 69, 0.6);
 $orderbg: linear-gradient(115.69deg, rgba(13, 181, 225, 0.6) 0%, rgba(95, 176, 242, 0.6) 100%);
 $orderbrdr:rgba(13, 181, 225, 0.6);
+$headerbg:#1D1A3D;
