--- a/src/assets/scss/_projectedit.scss
+++ b/src/assets/scss/_projectedit.scss
@@ -127,7 +127,7 @@ padding: 20px;
         background: #FFFFFF;
 box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 border-radius: 8px;
-p {
+h6 {
     margin:0px;
     font-family: Lato;
     font-style: normal;
@@ -152,6 +152,15 @@ p {
             color:#FB3958;
         }
     }
+    }
+    p {
+        margin:0px;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        letter-spacing: 0.015em;
+        color: #000000;
     }
     }
 }
