--- a/src/assets/scss/_projectedit.scss
+++ b/src/assets/scss/_projectedit.scss
@@ -157,10 +157,10 @@ h6 {
         margin:0px;
         font-family: Lato;
         font-style: normal;
-        font-weight: bold;
+        font-weight: 500;
         font-size: 12px;
         letter-spacing: 0.015em;
-        color: #000000;
+        color: #777;
     }
     }
 }
