latest build with form api integration on generate api

--- a/src/assets/scss/_pricing.scss
+++ b/src/assets/scss/_pricing.scss
@@ -145,7 +145,7 @@
     font-weight: 800;
     font-size: 16px;
     line-height: 19px;
-    color: #FFFFFF;
+    color: #5433ff;
     margin:0 auto;
     position: absolute;
     z-index: 1;
