--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -429,3 +429,37 @@ input[type=checkbox]:checked + label:before {
     display: none;
   }
 }
+
+.changepassword {
+  float: right;
+  color: #5433ef;
+  text-decoration: none;
+  padding: 30px 0px;
+}
+
+.divTable .divTableRow:nth-child(even) {
+  background: rgb(181 181 181 / 15%);
+}
+.backdrop {
+  .modal {
+    display: flex;
+    justify-self:center;
+    text-align: center;
+    p {
+      font-size: 18px;
+    }
+    div {
+      width:100%;
+    text-align: center;
+      align-self: center;
+    }
+    button {
+      color:#fff;
+      padding: 10px 0px ;
+      margin-right: 20px;
+      &:hover{
+        color:#5433ef !important;
+      }
+    }
+  }
+}
