--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -181,8 +181,7 @@ color: #FFFFFF;
   }
 }
 .side-menu-top {
-  padding-bottom: 30px;
-  margin-top: -10px;
+  margin-top: -30px;
   .logo {
     text-align: center;
     img {
@@ -400,4 +399,14 @@ color:#fff;
 
 .MuiAppBar-root {
   z-index: 100 !important ;
+}
+.userDrop  {
+  p {
+    color: #fff;
+    font-size: 12px;
+  }
+  select.form-control {
+    height: 33px;
+    font-size: 12px;
+  }
 }
