--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -367,8 +367,7 @@ color:#fff;
   border-top: 1px dotted #fff;
   padding-top: 7px !important;
   @media screen and (min-width:1401px) {
-    position: absolute;
-    bottom: 10px;
+    margin-top: 90px;
   }
   @media screen and (max-width:1401px) {
     margin-top: 10px;;
