latest build with form api integration on generate api

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -409,3 +409,15 @@ color:#fff;
     font-size: 12px;
   }
 }
+
+.MuiDrawer-paperAnchorDockedLeft {
+  &>div {
+    height: 100%;
+  }
+  .mainMenu {
+    display: flex;
+    flex-direction: column;
+    height: 88%;
+    justify-content: space-between;
+  }
+}
