updated ui fixes as per QA report

--- a/src/assets/scss/_projectedit.scss
+++ b/src/assets/scss/_projectedit.scss
@@ -157,10 +157,12 @@ h6 {
         margin:0px;
         font-family: Lato;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 700;
         font-size: 12px;
         letter-spacing: 0.015em;
         color: #777;
+        margin: 7px 0px;
+        width: 82%;
     }
     }
 }
