--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -74,7 +74,9 @@
   h3 {
     font-family: Lato;
     font-style: normal;
-    min-height: 35px;
+    @media screen and (max-width:1601px) {
+      min-height: 35px;
+    }
     font-weight: 600;
     font-size: 16px;
     line-height: 19px;
