--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -182,12 +182,12 @@ color: #FFFFFF;
   }
 }
 .side-menu-top {
-  margin-top: -30px;
+  margin-top: -56px;
   .logo {
     text-align: center;
     img {
       margin: 0 auto;
-      width: 150px;
+      width: 180px;
     }
   }
   .avatar {
@@ -362,6 +362,7 @@ color:#fff;
 .bottomLine {
   text-align: left;
   p {
+  text-align: left;
     a {
       margin-left: 0px !important;
     }
@@ -422,4 +423,8 @@ color:#fff;
     height: 88%;
     justify-content: space-between;
   }
+}
+
+.MuiListItemText-inset {
+  padding-left: 43px !important;
 }
