--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -251,6 +251,7 @@ form {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
+    padding: 16px 16px;
     line-height: 17px;
     letter-spacing: 0.05em;
     color: #000000;
@@ -483,12 +484,55 @@ input[type=checkbox]:checked + label:before {
   color:#5433ef;
   a {
     text-decoration: none;
-    font-size: 18px;
-  color:#5433ef;
+    font-size: 11px;
+    color: #5433ff;
+    background-color: inherit;
+    padding: 7px 13px;
+    border-radius: 13px;
+    margin: 0px 6px;
+    border: 1px solid #5433ff !important;
   }
   i {
     margin-left: 15px;
     font-size: 18px;
   color:#5433ef;
+  }
+}
+.loadmore {
+  background: #5433ff;
+  mix-blend-mode: normal;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 11%);
+  border-radius: 8px;
+  text-align: center;
+  display: block;
+  width: 100%;
+  -webkit-letter-spacing: 0.05rem;
+  -moz-letter-spacing: 0.05rem;
+  -ms-letter-spacing: 0.05rem;
+  letter-spacing: 0.05rem;
+  border: 1px solid #5433ff;
+  margin-bottom: 30px;
+  color:#fff;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 7px 13px;
+  border-radius: 13px;
+  margin: 0px 6px;
+  width: 121px;
+  display:flex;
+  margin: 0 auto;
+  border: 1px solid #5433ff !important;
+}
+.randomIcons {
+  position: absolute;
+  right: 7px;
+  bottom:7px;
+  font-size: 16px;
+  cursor: pointer;
+  color:gray;
+  margin: 0px 0px;
+  i {
+    margin: 0px 4px;
   }
 }
