--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -536,3 +536,20 @@ input[type=checkbox]:checked + label:before {
     margin: 0px 4px;
   }
 }
+
+.svgLoader {
+  animation: spin 0.5s linear infinite;
+  margin: auto;
+}
+.divLoader {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
