updated ui fixes

--- a/src/assets/scss/_projectedit.scss
+++ b/src/assets/scss/_projectedit.scss
@@ -158,8 +158,8 @@ h6 {
         font-family: Lato;
         font-style: normal;
         font-weight: 700;
-        font-size: 12px;
-        letter-spacing: 0.015em;
+        font-size: 14x;
+        letter-spacing:0.05em;
         color: #777;
         margin: 7px 0px;
         width: 82%;
