--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -65,9 +65,8 @@
   p {
     font-family: Lato;
     font-style: normal;
-    font-weight: normal;
+    font-weight:600;
     font-size: 12px;
-    line-height: 14px;
     letter-spacing: 0.01em;
     color: #999999;
   }
@@ -122,7 +121,6 @@
     font-style: normal;
     font-weight: 700;
     letter-spacing: 0.05rem;
-    text-transform: uppercase;
     font-size: 18px;
     margin: 0px;
     line-height: 22px;
