--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -16,7 +16,7 @@
   padding: 0;
 }
 .owl-carousel .owl-stage-outer {
-  /* override */
+  /* override*/
   overflow: initial;
 }
 .owl-stage-outer, .tab-content, .tab-pane {
@@ -26,26 +26,26 @@ body {
   background-color: #fff !important;
 }
 
-/* width */
+/* width*/
 ::-webkit-scrollbar {
   width: 3px;
 }
 
-/* Track */
+/* Track*/
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
   display: none;
 }
 
-/* Handle */
+/* Handle*/
 ::-webkit-scrollbar-thumb {
   background: #333;
   border-radius: 10px;
   display: none;
 }
 
-/* Handle on hover */
+/* Handle on hover*/
 ::-webkit-scrollbar-thumb:hover {
   background: #333;
   display: block;
@@ -334,41 +334,41 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
-/*** custom checkboxes ***/
+/*** custom checkboxes***/
 input[type=checkbox] {
   display:none;
 }
-/* to hide the checkbox itself */
+/* to hide the checkbox itself*/
 input[type=checkbox] + label:before {
   font-family: FontAwesome;
   display: inline-block;
   padding: 11px 12px;
     background-size: 23px;
     margin: 7px 0px;
-    /* width: 30px; */
-    /* height: 30px; */
+    /* width: 30px;*/
+    /* height: 30px;*/
     background-repeat: no-repeat;
 }
 input[type=checkbox] + label:before {
   content:"";
   background-image: url('../images/heart.png');
 }
-/* unchecked icon */
+/* unchecked icon*/
 input[type=checkbox] + label:before {
   letter-spacing: 10px;
 }
-/* space between checkbox and label */
+/* space between checkbox and label*/
 input[type=checkbox]:checked + label:before {
   content:"";
   background-image: url('../images/like.png');
 }
-/* checked icon */
+/* checked icon*/
 input[type=checkbox]:checked + label:before {
   letter-spacing: 5px;
 }
-/* allow space for check mark */
+/* allow space for check mark*/
 
-/* DivTable.com */
+/* DivTable.com*/
 .divTable{
 	display: table;
 	width: 100%;
@@ -475,10 +475,19 @@ input[type=checkbox]:checked + label:before {
     margin-top: 10px;
   }
 }
-
+.NotificationEdit {
+  @media screen and (max-width:991px) {
+    margin-top: 20px  ;
+  }
+}
 .clearConsole {
   position: absolute;
-  right: 21px;
+  right: 125px;
+  @media screen and (max-width:991px) {
+    right: 15px;
+    position: initial;
+    margin-bottom: 20px;
+  }
   top: 17px;
   font-size: 13px;
   color:#5433ef;
@@ -487,7 +496,7 @@ input[type=checkbox]:checked + label:before {
     font-size: 11px;
     color: #5433ff;
     background-color: inherit;
-    padding: 7px 13px;
+    padding: 5px 13px;
     border-radius: 13px;
     margin: 0px 6px;
     border: 1px solid #5433ff !important;
@@ -536,20 +545,42 @@ input[type=checkbox]:checked + label:before {
     margin: 0px 4px;
   }
 }
+button.clear {
+  width: inherit;
+  @media screen and (max-width:991px) {
+    position:initial;
+  }
+  position: absolute;
+  top: 10px;
+  right:23px;
+  text-decoration: none;
+  font-size: 11px;
+  font-weight: normal;
+  color: #5433ff;
+  background-color: inherit;
+  padding: 4px 11px;
+  border-radius: 13px;
+  margin: 3px 6px;
+  border: 1px solid #5433ff !important;
+  width: unset !important;
+  height: inherit;
+  text-transform: inherit;
+}
 
-.svgLoader {
-  animation: spin 0.5s linear infinite;
-  margin: auto;
+
+.innerPage {
+  .row {
+    position: relative;
+  }
+  .card {
+    position: static;
+  }
 }
-.divLoader {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
+.box  {
+  display: none;
 }
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.show {
+  display: block;
+  z-index: 1;
+  bottom:0px;
 }
