--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -10,6 +10,8 @@
 @import './profile.scss';
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+@import url('https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 * {
   margin: 0;
@@ -551,8 +553,9 @@ button.clear {
     position:initial;
   }
   position: absolute;
-  top: 10px;
-  right:23px;
+  top: 18px;
+  margin: 0 !important;
+  right: 23px;
   text-decoration: none;
   font-size: 11px;
   font-weight: normal;
