--- a/src/assets/scss/common copy.scss
+++ b/src/assets/scss/common copy.scss
@@ -63,7 +63,7 @@ body {
   margin-left: 80px;
 }
 .innerPage {
-  padding:100px 42px 50px;
+  padding:70px 20px 50px;
 }
 .pageTitle {
   position: absolute;
@@ -192,6 +192,7 @@ body {
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+  margin-left: 11px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
 
@@ -338,6 +339,7 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
+
 
 /* DivTable.com*/
 .divTable{
