latest build with login register and reset password pages

--- a/src/assets/scss/_register.scss
+++ b/src/assets/scss/_register.scss
@@ -139,6 +139,18 @@
             background-color: #fff;
         }
     }
+    .form-help {
+        font-size: 0.875rem;
+        font-weight: 400;
+        line-height: 1rem;
+        color: #110f24;
+        opacity: 0.4;
+        line-height: 2.5rem;
+        text-decoration: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 }
 .already {
     span {
